# ml-pipe

./: README.md  pyproject.toml
ml_pipe/: pipeline.py
tests/: test_pipe.py
