[tool.poetry]
name = "ml_pipe"
version = "0.0.6"
description = "Pipeline operating on dataframes."
authors = ["Veit Wehner <veit.wehner@siemens.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
